sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: not found: value whille
    whille(echange){
    ^